--- a/arch/arm/configs/cm_fx6_defconfig
+++ b/arch/arm/configs/cm_fx6_defconfig
@@ -1,5 +1,5 @@
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-cm-fx6-6.1"
+CONFIG_LOCALVERSION="-cm-fx6-6.2"
 CONFIG_SYSVIPC=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_IKCONFIG=y
@@ -23,14 +23,11 @@ CONFIG_USB_EHCI_ARC_H1=y
 CONFIG_USB_FSL_ARC_OTG=y
 CONFIG_MXC_PWM=y
 CONFIG_MXC_REBOOT_MFGMODE=y
-CONFIG_CLK_DEBUG=y
 CONFIG_DMA_ZONE_SIZE=184
 # CONFIG_SWP_EMULATE is not set
 CONFIG_ARM_ERRATA_743622=y
 CONFIG_ARM_ERRATA_751472=y
-CONFIG_ARM_ERRATA_754322=y
 CONFIG_PCIEPORTBUS=y
-CONFIG_ARM_ERRATA_764369=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
@@ -52,10 +49,8 @@ CONFIG_CPU_FREQ_IMX=y
 CONFIG_VFP=y
 CONFIG_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
-CONFIG_SUSPEND_DEVICE_TIME_DEBUG=y
+CONFIG_BINFMT_MISC=y
 CONFIG_PM_RUNTIME=y
-CONFIG_PM_DEBUG=y
-CONFIG_PM_ADVANCED_DEBUG=y
 CONFIG_APM_EMULATION=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -287,10 +282,7 @@ CONFIG_NLS_ASCII=m
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=m
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_DEBUG_FS=y
-CONFIG_DEBUG_KERNEL=y
 CONFIG_SYSCTL_SYSCALL_CHECK=y
-# CONFIG_FTRACE is not set
 # CONFIG_CRYPTO_MANAGER_DISABLE_TESTS is not set
 CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_CCM=y
