--- a/arch/arm/configs/utilite_defconfig
+++ b/arch/arm/configs/utilite_defconfig
@@ -1,5 +1,5 @@
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-cm-fx6-6.1"
+CONFIG_LOCALVERSION="-cm-fx6-6.2"
 CONFIG_SYSVIPC=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_IKCONFIG=y
@@ -22,13 +22,10 @@ CONFIG_USB_EHCI_ARC_H1=y
 CONFIG_USB_FSL_ARC_OTG=y
 CONFIG_MXC_PWM=y
 CONFIG_MXC_REBOOT_MFGMODE=y
-CONFIG_CLK_DEBUG=y
 CONFIG_DMA_ZONE_SIZE=184
 CONFIG_ARM_ERRATA_743622=y
 CONFIG_ARM_ERRATA_751472=y
-CONFIG_ARM_ERRATA_754322=y
 CONFIG_PCIEPORTBUS=y
-CONFIG_ARM_ERRATA_764369=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
@@ -50,10 +47,7 @@ CONFIG_CPU_FREQ_IMX=y
 CONFIG_VFP=y
 CONFIG_NEON=y
 CONFIG_BINFMT_MISC=m
-CONFIG_SUSPEND_DEVICE_TIME_DEBUG=y
 CONFIG_PM_RUNTIME=y
-CONFIG_PM_DEBUG=y
-CONFIG_PM_ADVANCED_DEBUG=y
 CONFIG_APM_EMULATION=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -86,7 +80,6 @@ CONFIG_IPV6_SUBTREES=y
 CONFIG_IPV6_MROUTE=y
 CONFIG_IPV6_PIMSM_V2=y
 CONFIG_NETFILTER=y
-CONFIG_NETFILTER_DEBUG=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_ZONES=y
 CONFIG_NF_CONNTRACK_EVENTS=y
@@ -174,7 +167,6 @@ CONFIG_IP_SET_HASH_NETPORT=m
 CONFIG_IP_SET_LIST_SET=m
 CONFIG_IP_VS=y
 CONFIG_IP_VS_IPV6=y
-CONFIG_IP_VS_DEBUG=y
 CONFIG_IP_VS_PROTO_TCP=y
 CONFIG_IP_VS_PROTO_UDP=y
 CONFIG_IP_VS_PROTO_ESP=y
@@ -555,7 +547,6 @@ CONFIG_USB_SERIAL_OPTICON=m
 CONFIG_USB_SERIAL_VIVOPAY_SERIAL=m
 CONFIG_USB_SERIAL_ZIO=m
 CONFIG_USB_SERIAL_SSU100=m
-CONFIG_USB_SERIAL_DEBUG=m
 CONFIG_USB_LCD=m
 CONFIG_USB_LED=m
 CONFIG_USB_CYPRESS_CY7C63=m
@@ -623,9 +614,8 @@ CONFIG_NLS_ASCII=m
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=m
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_DEBUG_FS=y
-CONFIG_DEBUG_KERNEL=y
 CONFIG_SYSCTL_SYSCALL_CHECK=y
+CONFIG_FTRACE=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_CRYPTO_NULL=m
