ARM: i.MX6: cm-fx6: enable MIPI DSI in cm_fx6_defcocnfig
Enable MIPI DSI in cm_fx6_defcocnfig.

Signed-off-by: Valentin Raevsky <valentin@compulab.co.il>

--- a/arch/arm/configs/cm_fx6_defconfig
+++ b/arch/arm/configs/cm_fx6_defconfig
@@ -183,10 +183,12 @@ CONFIG_FB=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_SCF0403=y
-# CONFIG_BACKLIGHT_GENERIC is not set
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_PWM=m
 CONFIG_DISPLAY_SUPPORT=y
 CONFIG_FB_MXC_LDB=y
+CONFIG_FB_MXC_MIPI_DSI=y
+CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
 CONFIG_FB_MXC_HDMI=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
