ARM: i.MX6: cm-fx6: add DEBUG_FS to defconfig
Add DEBUG_FS to both defconfig.
This config has been removed by mistake at the latest release.

Signed-off-by: Valentin Raevsky <valentin@compulab.co.il>

--- a/arch/arm/configs/cm_fx6_defconfig
+++ b/arch/arm/configs/cm_fx6_defconfig
@@ -284,6 +284,7 @@ CONFIG_NLS_ASCII=m
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=m
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_DEBUG_FS=y
 CONFIG_SYSCTL_SYSCALL_CHECK=y
 # CONFIG_CRYPTO_MANAGER_DISABLE_TESTS is not set
 CONFIG_CRYPTO_TEST=m
