--- a/arch/arm/configs/utilite_defconfig
+++ b/arch/arm/configs/utilite_defconfig
@@ -614,6 +614,7 @@ CONFIG_NLS_ASCII=m
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=m
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_DEBUG_FS=y
 CONFIG_SYSCTL_SYSCALL_CHECK=y
 CONFIG_FTRACE=y
 CONFIG_SECURITY=y
